fix(security+quality): aplica 12 melhorias H1–H5, M1–M7 e B4 identificadas em code review
H1: logout simples agora invalida o access token (RefreshTokenPort.revoke retorna Optional<String>
    com o username; AuthService.logout chama tokenBlocklist.blockAllBefore)
H2: JwtService valida no startup que jwt.secret produz >= 256 bits
H3: LoginRateLimitingFilter usa getRequestURI().substring(contextPath.length()) em vez de
    getServletPath() — funciona corretamente em MockMvc e com server.servlet.context-path
H4: complexidade de senha (maiúscula, minúscula, dígito, especial) validada via @Pattern nas
    DTOs e via Pattern.compile no UserService
H5: reset() removido de LoginRateLimiterPort; teste usa instanceof cast para acessar o método
    concreto de InMemoryLoginRateLimiterAdapter sem vazar infra no core port

M1: UserEntity remove @AllArgsConstructor (anti-pattern para entidades JPA)
M2: UserController migra para Stream.toList() (Java 16+)
M3: SeedConfig loga falhas com log.debug em vez de silenciar
M4: SecurityConfig documenta convenção hasAuthority vs hasRole
M5: application-prod.properties corrige default REDIS_SSL para true
M6: coberto pelo H2 (startup validation)
M7: LoginRateLimiterPort remove default reset() que vazava infra de teste no core

B4: novos testes de integração — PermissionControllerSecurityTest (6 casos),
    UserControllerSecurityTest +1, UserProfileAndSessionsTest +3, AuthServiceTest +2,
    AuthRateLimitingTest +1 (refresh), AuthFlowPostgresIT (Testcontainers, skip sem ENABLE_TC)

70 testes passam, 4 skipped (Testcontainers requerem ENABLE_TC=true)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>